tests/valid/replace/replace_through_nested_ref.facet
fn nested_replace(mut x: unrestricted isize) -> unrestricted isize {
    let mut r = (&mut x) in
    let mut rr = (&mut r) in
    let old: unrestricted isize = (replace **rr 42) in
    old
}
